--- a/Scripts/Runtime/Vulpes.Menus.asmdef
+++ b/Scripts/Runtime/Vulpes.Menus.asmdef
@@ -3,6 +3,7 @@
     "references": [
         "UnityEngine.UI",
         "Unity.TextMeshPro",
+        "Unity.InputSystem",
         "Vulpes.Promises"
     ],
     "includePlatforms": [],
