--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "com.unity.ugui": "1.0.0",
     "com.unity.textmeshpro": "2.0.1",
+    "com.unity.inputsystem": "1.0.2",
     "com.vulpes.promises": "1.1.0"
   },
   "samples": [
