CHANGE: Updated package to version '0.9.0-preview.1'.

--- a/Scripts/Runtime/Vulpes.Menus.asmdef
+++ b/Scripts/Runtime/Vulpes.Menus.asmdef
@@ -1,10 +1,12 @@
 {
     "name": "Vulpes.Menus",
+    "rootNamespace": "Vulpes.Menus",
     "references": [
         "UnityEngine.UI",
         "Unity.TextMeshPro",
         "Unity.InputSystem",
-        "Vulpes.Promises"
+        "Vulpes.Promises",
+        "Vulpes.Transitions"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
