--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "com.vulpes.menus",
   "displayName": "Vulpes Menu Framework",
-  "version": "0.6.0-preview.1",
-  "unity": "2020.3",
+  "version": "0.9.0-preview.1",
+  "unity": "2021.2",
   "description": "A Promise driven game menu framework for Unity.",
   "keywords": [
     "vulpes",
@@ -18,6 +18,7 @@
     "com.unity.ugui": "1.0.0",
     "com.unity.textmeshpro": "2.0.1",
     "com.unity.inputsystem": "1.0.2",
+    "com.vulpes.transitions": "0.9.0-preview.1",
     "com.vulpes.promises": "1.1.0"
   },
   "samples": [
@@ -27,5 +28,5 @@
       "path": "Samples~/Menu Samples"
     }
   ],
-  "unityRelease": "20f1"
+  "unityRelease": "0f1"
 }
