--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "com.vulpes.menus",
   "displayName": "Vulpes Menu Framework",
-  "version": "1.0.2",
+  "version": "2.0.0",
   "unity": "2021.3",
-  "description": "A Promise driven game menu framework for Unity.",
+  "description": "The Vulpes Menu Framework is a Promise driven menu system that serves as a companion to Unity’s built-in UI system.",
   "keywords": [
     "vulpes",
     "menus"
@@ -17,8 +17,8 @@
   "dependencies": {
     "com.unity.ugui": "1.0.0",
     "com.unity.textmeshpro": "3.0.6",
-    "com.unity.inputsystem": "1.0.2",
-    "com.vulpes.transitions": "1.0.2",
+    "com.unity.inputsystem": "1.3.0",
+    "com.vulpes.transitions": "1.0.3",
     "com.vulpes.promises": "2.1.1"
   },
   "samples": [
@@ -28,5 +28,6 @@
       "path": "Samples~/Menu Samples"
     }
   ],
-  "unityRelease": "0f1"
+  "unityRelease": "0f1",
+  "documentationUrl": "https://github.com/VulpesSoftware/com.vulpes.menus/blob/master/Documentation~/index.md"
 }
