--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "com.vulpes.menus",
   "displayName": "Vulpes Menu Framework",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "unity": "2021.3",
-  "description": "The Vulpes Menu Framework is a Promise driven menu system that serves as a companion to Unity’s built-in UI system.",
+  "description": "The Vulpes Menu Framework is a Promise driven menu system that serves as a companion to Unity\u2019s built-in UI system.",
   "keywords": [
     "vulpes",
     "menus"
@@ -18,7 +18,7 @@
     "com.unity.ugui": "1.0.0",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.inputsystem": "1.3.0",
-    "com.vulpes.transitions": "1.0.3",
+    "com.vulpes.transitions": "1.0.4",
     "com.vulpes.promises": "2.1.1"
   },
   "samples": [
